--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-parcelize'
     id 'kotlin-android'
     id 'androidx.navigation.safeargs.kotlin'
 }
