--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+
 }
