--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ android {
 }
 
 dependencies {
-    implementation "io.coil-kt:coil:1.1.0"
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
     // Moshi
     implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
